--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
     "npm": "6.14.11"
   },
   "scripts": {
-    "start": "node index.js",
-    "server": "nodemon index.js",
+    "start": "node index.ts",
+    "server": "nodemon index.ts",
+    "build": "tsc --project ./",
     "client": "npm run start --prefix client",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
     "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
@@ -29,5 +30,14 @@
     "path-parser": "^6.1.0",
     "sendgrid": "^5.2.3",
     "stripe": "^8.135.0"
+  },
+  "devDependencies": {
+    "@types/cookie-session": "^2.0.42",
+    "@types/express": "^4.17.11",
+    "@types/node": "^14.14.34",
+    "@types/passport": "^1.0.6",
+    "@types/passport-google-oauth20": "^2.0.7",
+    "ts-node": "^9.1.1",
+    "typescript": "^4.2.3"
   }
 }
