--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@types/node": "^14.14.34",
     "@types/passport": "^1.0.6",
     "@types/passport-google-oauth20": "^2.0.7",
+    "ts-mongoose": "0.0.24",
     "ts-node": "^9.1.1",
     "typescript": "^4.2.3"
   }
