--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   "devDependencies": {
     "@types/cookie-session": "^2.0.42",
     "@types/express": "^4.17.11",
+    "@types/lodash": "^4.14.168",
     "@types/node": "^14.14.34",
     "@types/passport": "^1.0.6",
     "@types/passport-google-oauth20": "^2.0.7",
