--- a/client/package.json
+++ b/client/package.json
@@ -51,6 +51,7 @@
   },
   "devDependencies": {
     "@types/react-redux": "^7.1.16",
-    "@types/react-router-dom": "^5.1.7"
+    "@types/react-router-dom": "^5.1.7",
+    "@types/redux-form": "^8.3.1"
   }
 }
