--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.2",
     "axios": "^0.21.1",
+    "formik": "^2.2.6",
     "http-proxy-middleware": "^1.0.6",
     "materialize-css": "^1.0.0",
     "react": "^17.0.1",
