--- a/client/package.json
+++ b/client/package.json
@@ -24,7 +24,8 @@
     "redux-form": "^8.3.7",
     "redux-thunk": "^2.3.0",
     "typescript": "^4.2.3",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "yup": "^0.32.9"
   },
   "scripts": {
     "start": "react-scripts start",
